# Re-Searcher

./: .env.example  .gitignore  Patch.txt  README.md  config.example.yaml  extract_text.py  main.py  mkdocs.yml  ontology.example.yaml  pyproject.toml  requirements.txt  semantic_app.py  semantic_search.py
.github/workflows/: ci.yml
TestFiles/Markdown/: Correlations - 20200602152108-Beastie.md  Cosmology.md  Critical Realism - concepts.md  Critical Realism.md  Critique and defence of AQAL.md  Customised hypothesis template v1.md  D_Good-evil-20200207105753-CWD.md  D_Good-evil-20200207105753.md  D_Partiality-20200207122022.md  De-centered_Self-20200416092631-CWD.md  De-centered_Self-20200416092631.md  Definitions.md  Deleuze - Repetition and difference concepts.md  Deliberate_Practice-20200207151145.md  Depth and Depthlessness.md  Design Imperatives.md  Determinism.md  Diagnose-20200306121931.md  Dialogical Self-20200611131643.md  Dimensions-20200309140609.md  Directionality.md  Discourse analysis of coaching literature.md  Dodo effect-20200506155106.md  Draft answer to coachings identity problem.md  Dynamics-20200214151753.md  Ego.md  Emergence - PhD.md  Emergence-CWD.md  Emergence.md  Emergentism notes.md  Emotional Survival.md  Empty Chair Technique.md  (+13 more)
docs/: Spec Changes.txt  Specification.md  integrations.md  specification.md
src/: api.py  extract_text.py  main.py  ontology.py  semantic_search.py  zotero.py
tests/: test.html  test_api.py  test_extract_text.py  test_ontology.py  test_semantic_search.py  test_zotero.py
ui/: semanticApp_adv.py  semantic_app.py
(+20 files in other folders)
